# Aqueous

./: .editorconfig  Aqueous.slnx  PKGBUILD  README.md  REMAINING_WORK.md  aqueous-dev-setup.sh  aqueous-wayfire-setup.sh  aqueous.desktop  aqueous.install  launch_river.sh  wayfire.ini  wm.toml
.run/: Launch_Nested_River.run.xml
Aqueous/: Aqueous.csproj  Program.cs
Aqueous.InputDaemon/: Aqueous.InputDaemon.csproj  JsonReader.cs  LibinputInterop.cs  Program.cs  aqueous-inputd.service
Aqueous.OutputDaemon/: Aqueous.OutputDaemon.csproj  Json.cs  Program.cs  TomlConfig.cs  Validator.cs  WlrRandr.cs
Aqueous.OutputDaemon.Tests/: Aqueous.OutputDaemon.Tests.csproj  JsonTests.cs  TomlConfigTests.cs  ValidatorTests.cs  WlrRandrTests.cs
Aqueous.Tests/: Aqueous.Tests.csproj  DiagnosticsTests.cs  ExecConfigTests.cs  KeybindTests.cs  LayoutConfigOptionsForTests.cs  LayoutIdTests.cs  LayoutMathTests.cs  LayoutPluginRegistrationTests.cs  LayoutTests.cs  ProxyTypeTests.cs  RiverWindowManagerClientTests.cs  ScratchpadRegistryTests.cs  ScrollingLayoutTests.cs  SnapZoneTests.cs  StartupExecRunnerTests.cs  TagTests.cs  WindowStateTests.cs
Aqueous.WM/: Program.cs
Aqueous.WM.Tests/: Aqueous.WM.Tests.csproj  KeybindTests.cs  LayoutTests.cs  TagTests.cs  WindowStateTests.cs
AqueousGreeter/: AqueousGreeter.csproj  GreeterService.cs  GreeterWindow.cs  Program.cs  aqueous-greeter  greeter.css
docs/: layout.md  (+2 more)
wayfire-plugins/aqueous-corners/: meson.build
wayfire-plugins/aqueous-corners/metadata/: aqueous-corners.xml
wayfire-plugins/aqueous-corners/src/: aqueous-corners.cpp
(+464 files in other folders)
